# bookstore

./: .gitignore  Dockerfile  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml  workflow-pr.yml
book/: settings.py  urls.py
bookStore/: asgi.py  settings.py  urls.py  wsgi.py
bookstore/: settings.py  urls.py
bookstore/templates/: hello_world.html
order/migrations/: 0001_initial.py
order/models/: __init__.py  order.py
order/serializers/: __init__.py  order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: factories.py
product/migrations/: 0001_initial.py
product/models/: __init__.py  category.py  product.py
product/serializers/: __init__.py  category_serializer.py  product_serializer.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: category_viewset.py  product_viewset.py
staticfiles/: staticfiles.json
